feat: plans detail 관련 scss 변경
- 버튼을 클릭하여 상세 입력창이 나타난 후의 scss 수정
- 상세 입력창이 나타날 때 부드럽게 슬라이드 되도록 transition 설정 추가

--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -3,6 +3,7 @@ $border-gray: rgb(170, 170, 170);
 $soft-gray: rgb(201, 201, 201);
 $gray: rgb(173, 173, 173);
 $input-focus: rgba(255, 255, 255, 0.562);
+$input-focus-soft: rgba(255, 255, 255, 0.219);
 $title: rgb(63, 63, 63);
 
 // 연두, 초록 테마 색상
