--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -95,6 +95,11 @@ section {
 								top: 0;
 								bottom: 0;
 								margin: auto;
+								opacity: 0.83;
+
+								&:hover {
+									opacity: 1;
+								}
 							}
 
 							// 완료 버튼
@@ -316,6 +321,12 @@ section {
 								&.hidden {
 									display: none;
 								}
+
+								&:hover {
+									img {
+										opacity: 1;
+									}
+								}
 							}
 
 							.sentence__button {
@@ -325,6 +336,12 @@ section {
 								bottom: 0px;
 								right: 0px;
 								cursor: pointer;
+
+								&:hover {
+									img {
+										opacity: 1;
+									}
+								}
 							}
 
 							img {
@@ -332,6 +349,11 @@ section {
 								top: 5.5px;
 								width: 20px;
 								margin-right: 3px;
+								opacity: 0.83;
+
+								&:hover {
+									opacity: 1;
+								}
 							}
 							
 							.gray__button,
