feat: 할 일 중요도 관련 기능 추가
- 글 작성 시 중요 버튼 체크 시 해당 데이터가 함께 저장되어야 하기 때문에
  스키마와 controller를 수정
- 원래 radio 버튼은 선택 후 취소가 안되는 줄 알고 checkbox로
  지정했었는데 관계 없다는 것을 알게 됨. 다른 버튼들과 굳이 차별을 둬야
  할 이유가 없는 것 같아서 radio 버튼으로 변경
- 중요도가 체크된 경우 리스트 출력 시 눈에 띄도록 하기 위해 font 두께에
  변화를 줌

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -119,6 +119,10 @@ section {
 									text-decoration: line-through;
 								}
 
+								&.important {
+									font-weight: 600;
+								}
+
 								&.active {
 									display: none;
 								}
@@ -361,7 +365,7 @@ section {
 								display: inline-block;
 							}
 
-							.important__checkbox,
+							.important__radio,
 							.setence__radio,
 							.hidden {
 								display: none;
