feat: 오늘의 한 마디 출력 기능 추가
- 저장된 오늘의 한 마디 중 저장된 날짜가 오늘과 일치할 경우 원하는
  위치에 출력하고자 했음. 아직 여러번 입력을 막는 기능을 추가하지 못해서
  동일 날짜에 가장 먼저 저장된 내용을 출력하도록 기능을 추가함
- 반복문을 돌면서 동일 날짜에 저장된 내용이 있는지 확인하고, 없으면 안내
  문구를 출력하고 싶어서 flag를 이용해 저장된 내용이 있는지 없는지
  확인하도록 했음
- 계속 저장할 수 없도록 (이미 저장된 내용이 있다면 입력 form이 수정
  form이 되도록) 하는 기능을 추가해야 함
- 엔터를 인식하지 않으므로 엔터를 인식해서 저장된 그대로를 출력하도록
  기능 수정해야 함
- 입력 가능한 글자 수를 체크해 지정해줘야 함(너무 내용이 많을 시
  출력되는 곳의 높이가 고정되어 있어 범위를 벗어나 css가 보기 안좋아짐)
- 삭제 기능도 넣어야 할 것 같지만 당장 필요하지 않으니 고민해보자.

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -17,14 +17,17 @@ block content
                                 span.day=days[thisWeek.day[i]]
                                 |요일
                             .title__description
+                                - let flag = 0
                                 if user.sentence.length==0
                                     p.description 입력창 왼쪽 버튼을 눌러 입력해주세요.
                                 else
                                     each item in user.sentence
-                                        if thisWeek.year[j]==item.year && thisWeek.month[j]==item.month && thisWeek.date[j]==item.date
-                                            p.description=user.sentence.title
-                                        else
-                                            p.description 입력창 왼쪽 버튼을 눌러 입력해주세요.
+                                        if thisWeek.year[i]==item.year && thisWeek.month[i]==item.month && thisWeek.date[i]==item.date
+                                            p.description=item.content
+                                            - flag = 1
+                                            - break
+                                    if flag==0
+                                        p.description 입력창 왼쪽 버튼을 눌러 입력해주세요.
                         .todolist-box
                             ul.todolist
                                 each item in user.plans
