feat: 오늘의 한 마디 엔터 출력 기능 추가
textarea에서 enter가 \n으로 바꾸어 저장되는데, 출력할 때는 이를 br
태그로 바꿔야 enter로 보이기 때문에 해당 기능 추가

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -23,7 +23,7 @@ block content
                                 else
                                     each item in user.sentence
                                         if thisWeek.year[i]==item.year && thisWeek.month[i]==item.month && thisWeek.date[i]==item.date
-                                            p.description=item.content
+                                            p.description(id="description"+i) !{item.content.replace(/\n/g, '<br />')}
                                             - flag = 1
                                             - break
                                     if flag==0
