feat: 할 일 상세보기 버튼 추가
- 마우스를 hover 하지 않아도 상세 내용이 있다는 것을 표현하기 위해 상세
  내용이 있을 경우 고정되어 보이는 버튼을 추가
- 마우스 hover 시 기존에 숨겨져 있던 default 버튼이 나타나면서 상세 보기
  버튼이 옆으로 밀려나도록 했는데, 사용자 입장에서 불편할 수 있을 것
  같아서 수정해 볼 예정

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -35,10 +35,11 @@ block content
                                         +planBlock({
                                             id:item._id,
                                             title:item.title,
+                                            content:item.content,
                                             important:item.important,
                                             completed: item.completed
                                         })
-                        form.add-form(id="addForm"+i, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
+                        form.add-form(id="addForm"+i, method="post", autocomplete="off")
                             if i > 0
                                 .add-title(id="titleBox"+i)
                                     a.option__button(type="button", onclick=`slidePlanDetail(${i});`)
