--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -82,7 +82,11 @@ section {
 							&:hover {
 								background-color: $hover;
 
-								.buttons {
+								.more__button {
+									margin-right: 20px;
+								}
+
+								.buttons-default {
 									display: inline-block;
 								}
 							}
@@ -148,16 +152,21 @@ section {
 							// text 오른쪽 버튼들
 							// 기본적으로 보이는 수정, 삭제 버튼
 							.buttons {
-								float: right;
-								display: none;
+								position: absolute;
+								right: 21px;
+								top: 0px;
+								bottom: 0px;
+								margin: auto;
+
+								.more__button {
+									position: relative;
+									top: 2px;
+									display: inline-block;
+								}
 
 								// 수정 버튼 클릭 전 기본 버튼
 								&-default {
-									position: absolute;
-									right: 21px;
-									top: 0;
-									bottom: 0;
-									margin: auto;
+									display: none;
 
 									.edit__button {
 										margin-right: 21px;
@@ -183,6 +192,17 @@ section {
 									&.active {
 										display: inline-block;
 									}
+								}
+							}
+
+							&-content__span {
+								display: inline-block;
+								width: 360px;
+								margin-left: 32px;
+								font-size: 13px;
+
+								&.hidden {
+									display: none;
 								}
 							}
 						}
