feat: 할 일 상세보기 기능 추가
- 상세보기(더보기) 버튼 클릭 시 content 보이고 버튼 모양이 바뀌도록 기능
  추가
- .hidden는 display:none 속성만 추가/제거 할 경우 toggle하여 사용하는
  class로, .active 등 같은 용도이면서 다른 이름으로 중복되는 class를
  제거하고 .hidden으로 통일

--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -1,5 +1,6 @@
 // 공통 회색
 $border-gray: rgb(170, 170, 170);
+$white-gray: rgba(241, 241, 241, 0.411);
 $soft-gray: rgb(201, 201, 201);
 $gray: rgb(173, 173, 173);
 $input-focus: rgba(255, 255, 255, 0.562);
