feat: 중요 버튼 체크 기능 추가
- plans의 수정 버튼 클릭 시 값을 받아와 중요 버튼에 표시되도록 하는 기능
  추가
- 수정 버튼을 처음 클릭하는건지 다시 클릭하는건지, 다시 클릭한다면
  기존에 클릭한 할 일의 수정 버튼을 클릭하는지 아니면 다른 할 일의 수정
  버튼을 클릭하는지 구분하기 위해서 form에 hidden 타입으로 id값을 넣어줌
- content form이 보이고 idInput의 값이 plans.id와 동일하다면 해당
  plans.id의 수정 버튼을 클릭 시 form이 초기화되고 content form이
  슬라이드 되어 보이지 않도록 함

--- a/src/views/mixins/planBlock.pug
+++ b/src/views/mixins/planBlock.pug
@@ -2,7 +2,7 @@ mixin planBlock(i, plans = {})
     li.plan(id=`plan${plans.id}`)
         form(method="post")
             - const plansId = "'" + plans.id + "'"
-            - var plan = JSON.stringify(plans)
+            - const plan = JSON.stringify(plans)
             input(type="hidden", name="completed", value=plans.completed)
             - if (plans.important === "on")
                 - if (plans.completed === "false")
@@ -17,15 +17,14 @@ mixin planBlock(i, plans = {})
         form(method="post")
             - if (plans.completed === "false")
                 - if (plans.important === "on")
-                    span.plan-title__span.important(id=`span${plans.id}`)=plans.title
+                    span.plan-title__span.important=plans.title
                 - else
-                    span.plan-title__span(id=`span${plans.id}`)=plans.title
+                    span.plan-title__span=plans.title
             - else
                 - if (plans.important === "on")
-                    span.plan-title__span.completed.important(id=`span${plans.id}`)=plans.title
+                    span.plan-title__span.completed.important=plans.title
                 - else
-                    span.plan-title__span.completed(id=`span${plans.id}`)=plans.title
-            input.plan-title__input(type="text", name="title", id=`input${plans.id}`, value=plans.title)
+                    span.plan-title__span.completed=plans.title
             .buttons
                 .buttons-default(id=`defaultBtns${plans.id}`)
                     - if (plans.completed === "false")
