feat: 피드백 기능을 위한 버튼 추가
- 버튼 클릭 시 필요없는 버튼을 숨기고 별 다섯개로 점수를 매길 수 있도록
  해당 이미지 추가(비활성화 버튼만 보이도록 활성화 버튼은 주석처리)
- 피드백 삭제 버튼은 추가/수정 버튼과 같은 form 내에서 기능이 처리될 수
  있도록 추가

--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -10,15 +10,18 @@ $title: rgb(63, 63, 63);
 // 연두, 초록 테마 색상
 $background: #fbfff4;
 $border: rgb(143, 190, 135);
+$border-deep: rgb(142, 187, 134);
 $fill: rgb(184, 219, 163);
 $hover: rgb(234, 243, 225);
 $text: rgb(98, 150, 89);
-$text-deep: rgb(84, 110, 79);
+$text-deep: rgb(87, 133, 79);
+// $text-deep2: rgb(84, 110, 79);
 $text-hover: rgb(171, 212, 164);
 $text-drag: rgb(216, 255, 198);
 $header-button: rgb(142, 179, 121);
 $header-button-hover: rgb(162, 196, 142);
 $add-button: rgb(250, 255, 246);
+$delete-button: #d2eec0;
 // 노랑, 주황 테마 색상
 // $background: #fffcf4;
 // $border: rgb(255, 197, 150);
