feat: 피드백 추가 기능 추가
- 피드백 추가 버튼 클릭 시 피드백을 달기 원하는 할 일에 피드백 내용이
  추가
- 할 일의 피드백 버튼 클릭 시 해당 할 일의 id를 form에 추가하기 위해
  clickFeedback()의 파라미터에 plan 추가
- 오류가 발생되어 저장되지 않을 경우, 우선 간단하게 status 400을
  전달하도록 추가
- 피드백에 별점이 저장될 수 있도록 model에 별점 부분 추가
- 원하는 plan의 feedback을 저장할 수 있도록 controller에
  postUploadFeedback을 추가했는데 .push()가 먹히지 않아 =으로 대체. 뭐가
  문제인지, =으로 잘 들어갔는지 확인이 어려워 출력 기능을 먼저 구현할
  예정

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -57,7 +57,7 @@ block content
                                     .sentence__button
                                         button.add-detail__button.hidden(id=`contentButton${i}`, formaction=`plans${routes.uploadSentence}`) 추가
                                         button.edit-check__button.hidden(id=`editSentenceButton${i}`, formaction=`plans${routes.editSentence}`) 수정
-                                        button.add-detail__button.hidden(id=`addCommentButton${i}`, formaction=``) 추가
+                                        button.add-detail__button(id=`addCommentButton${i}`, formaction=`plans${routes.uploadFeedback}`) 추가
                                         button.edit-check__button.hidden(id=`editCommentButton${i}`, formaction=``) 수정
                                         button.delete__button(id=`deleteCommentButton${i}`, formaction=``) 삭제
                                     .detail-buttons
@@ -98,7 +98,7 @@ block content
                                         input.hidden(id=`senteceDaily${i}`, type="radio", name="daily", value="true", checked)
                                         input.hidden(id=`senteceGoal${i}`, type="radio", name="daily", value="false")
                                         each score in [1, 2, 3, 4, 5]
-                                            input(id=`rating${i}${score}`, type="radio", name="rate", value=score)
+                                            input.hidden(id=`rating${i}${score}`, type="radio", name="rate", value=score)
                                         input(id=`idInput${i}`, type="hidden", name="id")
                             - else
                                 .add-title
