feat: 피드백 출력 기능 추가
- 저장된 피드백 별점에 따라 별점 이미지로 나타내는 기능 추가
- 피드백 내용을 작성하고 싶지 않을 수 있기 때문에 content의 required
  속성을 없애 별점만 저장하고 확인할 수 있도록 수정(title을 작성할 수
  있도록 추가할 예정)

--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -13,6 +13,7 @@ $border: rgb(143, 190, 135);
 $border-deep: rgb(142, 187, 134);
 $fill: rgb(184, 219, 163);
 $hover: rgb(234, 243, 225);
+$hover-soft: rgba(234, 243, 225, 0.568);
 $text: rgb(98, 150, 89);
 $text-deep: rgb(87, 133, 79);
 // $text-deep2: rgb(84, 110, 79);
