--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -79,7 +79,7 @@ section {
 							padding: 8px;
 
 							&:hover {
-								background-color: $hover;
+								background-color: $hover-soft;
 
 								.buttons-default {
 									display: inline-block;
@@ -187,7 +187,17 @@ section {
 							&-detail {
 								background-color: $white-gray;
 
-								&__span {
+								.rating {
+									width: 360px;
+									margin-left: 32px;
+									padding-top: 7px;
+
+									img {
+										width: 15px;
+									}
+								}
+
+								span {
 									display: inline-block;
 									width: 360px;
 									margin-left: 32px;
@@ -197,14 +207,23 @@ section {
 									padding: 6px 0;
 									color: gray;
 
-									&.hidden {
+									&.hidden {	
 										position: relative;
 										bottom: -100px;
 										display: none;
 										transition: all ease .3s 0s;
 									}
 								}
+
+								.feedback__span {
+									padding-top: 0;
+								}
 							}
+						}
+
+						.feedback {
+							background-color: $hover-soft;
+							// background-color: #ffecec;
 						}
 					}
 				}
