refactor: 기능에 따른 버튼 관리를 위한 함수 추가
- 기능이 하나씩 늘어나다보니 기능에 따라(할 일/목표/피드백의
  추가/수정/삭제) 보여야 할 버튼이 달라 각 click 함수 내에서 따로
  관리하기가 힘들어짐. 그래서 hideButtons와 showButtons 함수를 생성
- 기본 addPlan 상태의 form에서 보여야할 버튼과 보이지 않아야 할 버튼이
  제대로 관리가 되지 않음. .hidden을 붙여 해당 문제 해결
- 현재 hideButtons와 showButtons를 만들었으나 완벽하게 모든 function에
  적용하지 못하여 앞으로 수정해야 함

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -70,7 +70,7 @@ section {
 						position: absolute;
 						width: 438px;
 						height: calc(
-							100% - 102px - 55px
+							100% - 102px - 50px
 						); // 전체 높이 - 상단 title 높이 - 하단 입력창 높이
 						overflow: auto;
 
@@ -238,7 +238,7 @@ section {
 				}
 
 				.add-form {
-					.add-title {
+					.title {
 						width: 438px;
 						position: absolute;
 						bottom: 0px;
@@ -255,9 +255,8 @@ section {
 						.option__button {
 							width: 26px;
 							position: relative;
-							top: 11px;
-							left: 12px;
-							margin-right: 7px;
+							top: -6px;
+							left: -194px;
 							opacity: 0.93;
 
 							img {
@@ -298,7 +297,7 @@ section {
 						}
 					}
 
-					.add-detail {
+					.detail {
 						position: absolute;
 						width: 438px;
 						height: 110px;
@@ -318,7 +317,7 @@ section {
 							bottom: 0px;
 						}
 
-						&__input {
+						&__textarea {
 							width: 326px;
 							height: 60px;
 							position: absolute;
@@ -416,8 +415,8 @@ section {
 						}
 					}
 						
-					.delete__button {
-						top: 44px;
+					.feedback-delete__button {
+						top: 10px;
 						color: $text-deep;
 						border: 1px solid $border-deep;
 						background-color: $delete-button;
