feat: 할 일, 목표 저장 시 날짜, 카테 포함되게 추가
이전 날짜 form을 정리하면서 hidden type으로 함께 저장되도록 설정해뒀던
category와 날짜를 함께 지우는 바람에 제대로 출력되지 않는 문제 발생.
추가하여 해결

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -109,4 +109,8 @@ block content
                                     each score in [1, 2, 3, 4, 5]
                                         input.hidden(id=`rating${i}${score}`, type="radio", name="rating", value=score)
                                     input(id=`idInput${i}`, type="hidden", name="id")
+                                    input(type="hidden", name="category", value="공부")
+                                    input(type="hidden", name="year", value=thisWeek.year[i])
+                                    input(type="hidden", name="month", value=thisWeek.month[i])
+                                    input(type="hidden", name="date", value=thisWeek.date[i])
         a.next__btn > 
