--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -186,44 +186,42 @@ section {
 
 							&-detail {
 								background-color: $white-gray;
-
-								.rating {
-									width: 360px;
-									margin-left: 32px;
-									padding-top: 7px;
-
-									img {
-										width: 15px;
-									}
-								}
-
-								span {
-									display: inline-block;
-									width: 360px;
-									margin-left: 32px;
-									font-size: 13px;
-									position: relative;
-									bottom: 0px;
-									padding: 6px 0;
-									color: gray;
-
-									&.hidden {	
-										position: relative;
-										bottom: -100px;
-										display: none;
-										transition: all ease .3s 0s;
-									}
-								}
-
-								.feedback__span {
-									padding-top: 0;
-								}
 							}
 						}
 
 						.feedback {
 							background-color: $hover-soft;
-							// background-color: #ffecec;
+							min-height: 32px;
+
+							&-title {
+								font-weight: 600;
+								display: inline-block;
+								width: 285px;
+								margin-left: 8px;
+								font-size: 13px;
+								padding-top: 7px;
+								color: gray;
+							}
+
+							&-content {
+								display: inline-block;
+								width: 360px;
+								margin-left: 32px;
+								font-size: 13px;
+								padding: 4px 0 7px 0;
+								color: gray;
+							}
+
+							&-rating {
+								width: 75px;
+								margin-left: 32px;
+								padding-top: 8px;
+								float: left;
+
+								img {
+									width: 15px;
+								}
+							}
 						}
 					}
 				}
