feat: add-form 상태에 따라 ul 높이 변경 기능 추가
- add-form이 title만 보일 때, content도 보일 때, content만 보일
  때(sentence)에 따라 ul(class명 todolist)의 높이가 바뀌어야 함. 높이가
  바뀌지 않으면 잘려서 보이기 때문. 그러기 위해 changeListHeight 함수
  생성
- 높이를 계산해서 각 class 생성. .sentence가 붙을 때는 form에서도
  애니메이션 효과가 없기 때문에 높이 변경 시에도 애니메이션을 주지
  않음

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -71,8 +71,21 @@ section {
 						width: 438px;
 						height: calc(
 							100% - 102px - 50px
-						); // 전체 높이 - 상단 title 높이 - 하단 입력창 높이
+						); // 전체 높이 - 상단 title 높이 - 하단 title 입력창 높이
 						overflow: auto;
+
+						&.content {
+							height: calc(
+								100% - 102px - 50px - 101px
+							); // 전체 높이 - 상단 title 높이 - 하단 title 입력창 높이 - 하단 content 입력창 높이
+							transition: all ease .3s 0s;
+						}
+
+						&.sentence {
+							height: calc(
+								100% - 102px - 112px
+							); // 전체 높이 - 상단 title 높이 - 하단 content 입력창 높이
+						}
 
 						.plan {
 							position: relative;
@@ -183,9 +196,23 @@ section {
 									}
 								}
 							}
+						}
 
-							&-detail {
-								background-color: $white-gray;
+						.detail {
+							background-color: $white-gray;
+
+							&__span {
+								display: inline-block;
+								width: 360px;
+								margin-left: 32px;
+								font-size: 13px;
+								padding: 7px 0;
+								color: gray;
+								word-break: break-word;
+
+								&.hidden {
+									display: none;
+								}
 							}
 						}
 
@@ -210,6 +237,7 @@ section {
 								font-size: 13px;
 								padding: 4px 0 7px 0;
 								color: gray;
+								word-break: break-word;
 							}
 
 							&-rating {
