feat: clickTime 함수 수정
clickTime 함수는 loadTime의 의미도 포함하고 있다. 그래서 받아온 time
값에 따라 원하는 radio 버튼을 check해줘야 하는데, 해당 부분 코드가
없어서 추가

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -376,6 +376,7 @@ section {
 
 							label {
 								font-size: 13px;
+								margin-right: 3px;
 								display: inline-block;
 								cursor: pointer;
 
